--- a/tests/functional/dev-compose.yaml
+++ b/tests/functional/dev-compose.yaml
@@ -5,7 +5,7 @@ volumes:
     name: test_elastic_data
 
 services:
-  elasticsearch:
+  test_elasticsearch:
     image: elasticsearch:7.13.2
     container_name: elasticsearch
     restart: always
@@ -31,7 +31,7 @@ services:
     ports:
      - "5601:5601"
     depends_on:
-     - elasticsearch
+     - test_elasticsearch
 
   test_redis:
     image: redis:6.2.6-bullseye
